[project]
name = "rt-ctae-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
             "ruff",
             "ty",
             "ipython",
             "polars",
             "more-itertools",
             "lseval"
]
[tool.uv.sources]
lseval = { path = "/Users/etg/Repos/lseval", editable = true }
[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["lseval*"]